fix: reactions not visible due to z-index issue

--- a/client/src/pages/videoCallScreen/VideoCallScreen.css
+++ b/client/src/pages/videoCallScreen/VideoCallScreen.css
@@ -320,6 +320,7 @@ svg {
     align-items: center;
     gap: 3px;
     color: #ffffff;
+    z-index: 10000;
 }
 
 .remote-user-mic-off {
@@ -393,6 +394,7 @@ svg {
     overflow-y: auto;
     animation: slideUp 0.4s ease-out;
     transition: opacity 1s ease;
+    z-index: 1000;
 }
 
 .reaction-emojis::-webkit-scrollbar {
